<resources>
    <string name="app_name">ui</string>
    <string name="tickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="shorts">Короче</string>
    <string name="subscriptions">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_page">Cтраница в разработке :)</string>
    <string name="title_text">Поиск дешевых \nавиабилетов</string>
    <string name="popular">Популярное направление</string>
</resources>