<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app">




    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">
    </FrameLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0.2dp"
        android:background="@color/text"
    app:layout_constraintBottom_toTopOf="@+id/linearLayout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/ll_tickets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/ib_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"

                android:background="@drawable/ic_plane"/>

            <TextView
                android:id="@+id/tv_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tickets"
                style="@style/TextPanel"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_hotels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/ib_hotels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_hotel"/>

            <TextView
                android:id="@+id/tv_hotels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotels"
                style="@style/TextPanel"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_short"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/ib_short"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="@drawable/ic_short"/>

            <TextView
                android:id="@+id/tv_short"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shorts"
                style="@style/TextPanel"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_subscriptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/ib_subscriptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="@drawable/ic_subscriptions"/>

            <TextView
                android:id="@+id/tv_subscriptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscriptions"
                style="@style/TextPanel"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"

            android:layout_weight="1">

            <ImageButton
                android:id="@+id/ib_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:background="@drawable/ic_profile"/>

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                style="@style/TextPanel"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
